add ngrx schematics , cle reducers and actions

--- a/angular.json
+++ b/angular.json
@@ -128,5 +128,8 @@
       }
     }
   },
-  "defaultProject": "fruit-app"
+  "defaultProject": "fruit-app",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
