--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@ngrx/effects": "^8.6.0",
+    "@ngrx/entity": "^8.6.0",
+    "@ngrx/schematics": "^8.6.0",
     "@ngrx/store": "^8.6.0",
     "angular-in-memory-web-api": "^0.9.0",
     "hammerjs": "^2.0.8",
